--- a/examples/alloy-autoscaling-and-storage/output.yaml
+++ b/examples/alloy-autoscaling-and-storage/output.yaml
@@ -69,7 +69,7 @@ metadata:
   name: k8smon-opencost
   namespace: default
   labels:
-    helm.sh/chart: opencost-1.35.0
+    helm.sh/chart: opencost-1.38.1
     app.kubernetes.io/name: opencost
     app.kubernetes.io/instance: k8smon
     app.kubernetes.io/version: "1.110.0"
@@ -589,7 +589,7 @@ data:
       rule {
         source_labels = ["__name__","image"]
         separator = "@"
-        regex = "(container_cpu_.*|container_fs_.*|container_memory_.*|container_network_.*)@"
+        regex = "(container_cpu_.*|container_fs_.*|container_memory_.*)@"
         action = "drop"
       }
       // Normalizing unimportant labels (not deleting to continue satisfying <label>!="" checks)
@@ -51409,7 +51409,7 @@ kind: ClusterRole
 metadata:
   name: k8smon-opencost
   labels:
-    helm.sh/chart: opencost-1.35.0
+    helm.sh/chart: opencost-1.38.1
     app.kubernetes.io/name: opencost
     app.kubernetes.io/instance: k8smon
     app.kubernetes.io/version: "1.110.0"
@@ -51585,7 +51585,7 @@ kind: ClusterRoleBinding
 metadata:
   name: k8smon-opencost
   labels:
-    helm.sh/chart: opencost-1.35.0
+    helm.sh/chart: opencost-1.38.1
     app.kubernetes.io/name: opencost
     app.kubernetes.io/instance: k8smon
     app.kubernetes.io/version: "1.110.0"
@@ -51808,7 +51808,7 @@ metadata:
   name: k8smon-opencost
   namespace: default
   labels:
-    helm.sh/chart: opencost-1.35.0
+    helm.sh/chart: opencost-1.38.1
     app.kubernetes.io/name: opencost
     app.kubernetes.io/instance: k8smon
     app.kubernetes.io/version: "1.110.0"
@@ -51818,7 +51818,7 @@ spec:
   selector:
     app.kubernetes.io/name: opencost
     app.kubernetes.io/instance: k8smon
-  type: ClusterIP
+  type: "ClusterIP"
   ports:
     - name: http
       port: 9003
@@ -52295,7 +52295,7 @@ metadata:
   name: k8smon-opencost
   namespace: default
   labels:
-    helm.sh/chart: opencost-1.35.0
+    helm.sh/chart: opencost-1.38.1
     app.kubernetes.io/name: opencost
     app.kubernetes.io/instance: k8smon
     app.kubernetes.io/version: "1.110.0"
@@ -53082,7 +53082,7 @@ data:
       rule {
         source_labels = ["__name__","image"]
         separator = "@"
-        regex = "(container_cpu_.*|container_fs_.*|container_memory_.*|container_network_.*)@"
+        regex = "(container_cpu_.*|container_fs_.*|container_memory_.*)@"
         action = "drop"
       }
       // Normalizing unimportant labels (not deleting to continue satisfying <label>!="" checks)
