--- a/examples/custom-metrics-tuning/output.yaml
+++ b/examples/custom-metrics-tuning/output.yaml
@@ -37,7 +37,7 @@ metadata:
   name: k8smon-opencost
   namespace: default
   labels:
-    helm.sh/chart: opencost-1.35.0
+    helm.sh/chart: opencost-1.38.1
     app.kubernetes.io/name: opencost
     app.kubernetes.io/instance: k8smon
     app.kubernetes.io/version: "1.110.0"
@@ -526,7 +526,7 @@ data:
       rule {
         source_labels = ["__name__","image"]
         separator = "@"
-        regex = "(container_cpu_.*|container_fs_.*|container_memory_.*|container_network_.*)@"
+        regex = "(container_cpu_.*|container_fs_.*|container_memory_.*)@"
         action = "drop"
       }
       // Normalizing unimportant labels (not deleting to continue satisfying <label>!="" checks)
@@ -50839,7 +50839,7 @@ kind: ClusterRole
 metadata:
   name: k8smon-opencost
   labels:
-    helm.sh/chart: opencost-1.35.0
+    helm.sh/chart: opencost-1.38.1
     app.kubernetes.io/name: opencost
     app.kubernetes.io/instance: k8smon
     app.kubernetes.io/version: "1.110.0"
@@ -50969,7 +50969,7 @@ kind: ClusterRoleBinding
 metadata:
   name: k8smon-opencost
   labels:
-    helm.sh/chart: opencost-1.35.0
+    helm.sh/chart: opencost-1.38.1
     app.kubernetes.io/name: opencost
     app.kubernetes.io/instance: k8smon
     app.kubernetes.io/version: "1.110.0"
@@ -51140,7 +51140,7 @@ metadata:
   name: k8smon-opencost
   namespace: default
   labels:
-    helm.sh/chart: opencost-1.35.0
+    helm.sh/chart: opencost-1.38.1
     app.kubernetes.io/name: opencost
     app.kubernetes.io/instance: k8smon
     app.kubernetes.io/version: "1.110.0"
@@ -51150,7 +51150,7 @@ spec:
   selector:
     app.kubernetes.io/name: opencost
     app.kubernetes.io/instance: k8smon
-  type: ClusterIP
+  type: "ClusterIP"
   ports:
     - name: http
       port: 9003
@@ -51452,7 +51452,7 @@ metadata:
   name: k8smon-opencost
   namespace: default
   labels:
-    helm.sh/chart: opencost-1.35.0
+    helm.sh/chart: opencost-1.38.1
     app.kubernetes.io/name: opencost
     app.kubernetes.io/instance: k8smon
     app.kubernetes.io/version: "1.110.0"
@@ -52167,7 +52167,7 @@ data:
       rule {
         source_labels = ["__name__","image"]
         separator = "@"
-        regex = "(container_cpu_.*|container_fs_.*|container_memory_.*|container_network_.*)@"
+        regex = "(container_cpu_.*|container_fs_.*|container_memory_.*)@"
         action = "drop"
       }
       // Normalizing unimportant labels (not deleting to continue satisfying <label>!="" checks)
