--- a/examples/openshift-compatible/output.yaml
+++ b/examples/openshift-compatible/output.yaml
@@ -54,7 +54,7 @@ metadata:
   name: k8smon-opencost
   namespace: default
   labels:
-    helm.sh/chart: opencost-1.35.0
+    helm.sh/chart: opencost-1.38.1
     app.kubernetes.io/name: opencost
     app.kubernetes.io/instance: k8smon
     app.kubernetes.io/version: "1.110.0"
@@ -559,7 +559,7 @@ data:
       rule {
         source_labels = ["__name__","image"]
         separator = "@"
-        regex = "(container_cpu_.*|container_fs_.*|container_memory_.*|container_network_.*)@"
+        regex = "(container_cpu_.*|container_fs_.*|container_memory_.*)@"
         action = "drop"
       }
       // Normalizing unimportant labels (not deleting to continue satisfying <label>!="" checks)
@@ -51229,7 +51229,7 @@ kind: ClusterRole
 metadata:
   name: k8smon-opencost
   labels:
-    helm.sh/chart: opencost-1.35.0
+    helm.sh/chart: opencost-1.38.1
     app.kubernetes.io/name: opencost
     app.kubernetes.io/instance: k8smon
     app.kubernetes.io/version: "1.110.0"
@@ -51428,7 +51428,7 @@ kind: ClusterRoleBinding
 metadata:
   name: k8smon-opencost
   labels:
-    helm.sh/chart: opencost-1.35.0
+    helm.sh/chart: opencost-1.38.1
     app.kubernetes.io/name: opencost
     app.kubernetes.io/instance: k8smon
     app.kubernetes.io/version: "1.110.0"
@@ -51666,7 +51666,7 @@ metadata:
   name: k8smon-opencost
   namespace: default
   labels:
-    helm.sh/chart: opencost-1.35.0
+    helm.sh/chart: opencost-1.38.1
     app.kubernetes.io/name: opencost
     app.kubernetes.io/instance: k8smon
     app.kubernetes.io/version: "1.110.0"
@@ -51676,7 +51676,7 @@ spec:
   selector:
     app.kubernetes.io/name: opencost
     app.kubernetes.io/instance: k8smon
-  type: ClusterIP
+  type: "ClusterIP"
   ports:
     - name: http
       port: 9003
@@ -51961,7 +51961,7 @@ metadata:
   name: k8smon-opencost
   namespace: default
   labels:
-    helm.sh/chart: opencost-1.35.0
+    helm.sh/chart: opencost-1.38.1
     app.kubernetes.io/name: opencost
     app.kubernetes.io/instance: k8smon
     app.kubernetes.io/version: "1.110.0"
@@ -52873,7 +52873,7 @@ data:
       rule {
         source_labels = ["__name__","image"]
         separator = "@"
-        regex = "(container_cpu_.*|container_fs_.*|container_memory_.*|container_network_.*)@"
+        regex = "(container_cpu_.*|container_fs_.*|container_memory_.*)@"
         action = "drop"
       }
       // Normalizing unimportant labels (not deleting to continue satisfying <label>!="" checks)
